Fix truncating item labels in form

--- a/webapp/src/global.scss
+++ b/webapp/src/global.scss
@@ -40,3 +40,7 @@
   }
 }
 
+/* Let item labels wrap instead of truncating, especially in forms with long translations. */
+ion-item ion-label {
+  max-width: 100% !important;
+}
